@@ -24,6 +24,7 @@
 * Merchant e-Solutions: Pass order_id with capture [curiousepic]
 * CyberSource: Add rescue for ResponseErrors [curiousepic]
 * AuthorizeNet: Always pass recurringBilling flag if present [curiousepic]
+* S5: Pass order_id to TransactionID [curiousepic]
 
 
 == Version 1.58.0 (March 1, 2016)
